--- a/app/src/main/res/layout/apod_item.xml
+++ b/app/src/main/res/layout/apod_item.xml
@@ -2,12 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
 
     <ImageView
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_width="200dp"
             android:layout_height="200dp" tools:srcCompat="@tools:sample/avatars[12]"
-            android:id="@+id/apod_image" android:contentDescription="@null"
-    android:padding="@dimen/margin_medium"/>
+            android:id="@+id/apod_image" android:contentDescription="@null"/>
 </RelativeLayout>
