--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,17 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context=".AboutFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".AboutFragment">
     <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"
-            android:layout_margin="@dimen/margin_medium"
+            android:id="@+id/about_text_details"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/about_details"
+            android:gravity="center"
             android:textSize="@dimen/description_dimen"
-            android:textColor="@color/color_title"/>
-
-</RelativeLayout>
+            android:layout_marginBottom="@dimen/margin_low"
+            android:layout_marginEnd="@dimen/margin_low"
+            android:layout_marginStart="@dimen/margin_low"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintVertical_bias="0.19999999"
+           />
+    <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/margin_low"
+            android:layout_marginStart="@dimen/margin_low"
+            android:layout_marginBottom="@dimen/margin_low"
+            android:layout_marginTop="@dimen/margin_low"
+            android:contentDescription="@null"
+            android:src="@drawable/info"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.100000024"
+            tools:src="@tools:sample/avatars[0]"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
