--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -36,8 +36,9 @@
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/margin_medium"
                     android:layout_marginBottom="28dp" app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
-                    android:fontFamily="@font/roboto_mono_bold"
-                    android:layout_marginTop="@dimen/margin_medium" app:layout_constraintTop_toBottomOf="@+id/detail_image"
+                    android:fontFamily="@font/roboto_bold"
+                    android:layout_marginTop="@dimen/margin_medium"
+                    app:layout_constraintTop_toBottomOf="@+id/detail_image"
                     app:layout_constraintVertical_bias="0.0"/>
             <TextView
                     android:text="@{detailsViewModel.data.explanation}"
@@ -50,7 +51,7 @@
                     app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/margin_low"
                     app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/margin_low"
                     app:layout_constraintVertical_bias="0.0" android:layout_marginTop="@dimen/margin_high"
-                    app:layout_constraintHorizontal_bias="0.0"/>
+                    app:layout_constraintHorizontal_bias="0.0" android:fontFamily="@font/roboto_light"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
