--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -12,16 +12,22 @@
             android:layout_height="match_parent"
             >
         <Button
+                android:id="@+id/intro_button"
                 android:text="@string/main_button_text"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:textSize="17sp"
-                android:textColor="@color/secondaryDarkColor"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary"
                 android:onClick="@{() -> introViewModel.navigate()}"
-                android:id="@+id/intro_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="@dimen/margin_low"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="@dimen/margin_low"
-                android:layout_marginBottom="@dimen/margin_low" app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_marginTop="@dimen/margin_low" app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginEnd="@dimen/margin_low"
+                android:layout_marginStart="@dimen/margin_low"
+                android:layout_marginBottom="@dimen/margin_low"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="@dimen/margin_low"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.86"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
